--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-tomcat"
     compile "org.grails:grails-dependencies"
     compile "org.grails:grails-web-boot"
+	compile "org.springframework.boot:spring-boot-starter-websocket"
+	compile 'org.springframework.boot:spring-boot-starter-redis'
+	compile "org.springframework:spring-messaging"
 
     compile "org.grails.plugins:hibernate"
     compile "org.grails.plugins:cache"
